bitfields/tests/compile_error_cases/errors/bitfield_attribute_non_struct.stderr
error: expected `struct`
 --> tests/compile_error_cases/errors/bitfield_attribute_non_struct.rs:4:5
  |
4 | pub enum NonStruct {
  |     ^^^^
